[package]
name = "pistontest-parrot"
version = "0.1.0"
authors = ["Vincent Regener <v.regener@tu-bs.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.36.0"
piston2d-opengl_graphics = "0.72.0"
pistoncore-glutin_window = "0.63.0"
